@@ -55,6 +55,7 @@ Bugs fixed
 - Bug 2376 - New A-MPDU might not be received if MPDUs of a previous A-MPDU are lost
 - Bug 2377 - SocketIpTosTag and SocketIpv6TclassTag may be added twice in UDP
 - Bug 2378 - A-MPDU variables are not correctly reset in YansWifiPhy when a PLCP preamble/header failed
+- Bug 2379 - BlockAckRequest should not be part of single-TID A-MPDUs
 - Bug 2380 - EdcaTxopN fails to retrieve TID for ADDBA requests, ADDBA responses and DELBA frames
 - Bug 2383 - IPv4 header for reassembled packets reports a wrong payload size
 - Bug 2392 - SYN segment advertised window should not be scaled
